tests/fixtures/LatestTests/ContainerTests/errors/array_rank_mismatch_error.fg
/; EXPECT_ERROR: ContainerExpressionRankMismatch
var a:int[5] = [1, [2,3]]
